# ResearchFlow

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml  run.py
app/: streamlit_ui.py
src/graph/: graph.py  state.py
src/graph/nodes/: analyze_coverage.py  cite_papers.py  export_review.py  finalize.py  generate_queries.py  literature_review.py  rank_papers.py  review.py  review_lit_review.py  revise.py  revise_lit_review.py  search_followup_pubmed.py  search_pubmed.py  summarize.py  summarize_papers.py  synthesize.py
src/prompts/: coverage.py  generate_queries.py  literature_review.py  review.py  review_lit_review.py  revise.py  revise_lit_review.py  summarize.py  summarize_papers.py  synthesize_literature.py
src/schema/: citations.py  coverage.py  lit_review.py  paper.py  queries.py  review.py  summary.py  synthesis.py
src/services/: embedding.py  export.py  formatting.py  llm.py  pubmed_search.py  ranking.py
src/services/mcp/: get_tools.py  pubmed.py
src/utils/: logging.py  pubmed.py  review.py  routing.py  ui.py
tests/: test_caching.py  test_pubmed_parsing.py
